--- a/src/app/pages/groupStudents/groupStudents.html
+++ b/src/app/pages/groupStudents/groupStudents.html
@@ -23,7 +23,7 @@
 <body>
   <!-- ME PETA AQUI Y NO SE PORQUE-->
   <div class="groupStudent-content">
-    <button mat-raised-button (click)="showGames(students)">{{ 'GROUPS.MYGAMES' |translate }}</button>
+    <button class="btn1" mat-raised-button (click)="showGames(students)">{{ 'GROUPS.MYGAMES' |translate }}</button>
     <table>
       <tr width="35">
         <th>{{ 'STUDIENTS.AVATAR' | translate }}</th>
