--- a/src/app/pages/groupStudents/groupStudents.scss
+++ b/src/app/pages/groupStudents/groupStudents.scss
@@ -1,4 +1,16 @@
 .groupStudent-content {
   margin: 40px auto;
   max-width: 1800px;
+  margin-left: 10px !important;
+}
+
+.btn1 {
+  color: rgb(49, 46, 46) !important;
+  background-color: #3f51b5 !important;
+  border-radius: 10px 10px 10px 10px !important;
+  font-size: 16px !important;
+  width: auto !important;
+  font-size: 16px !important;
+  padding: 10px 12px !important;
+  margin-bottom: 10px !important;
 }
