--- a/src/app/pages/games/games.html
+++ b/src/app/pages/games/games.html
@@ -1,6 +1,6 @@
 <div class="groups-content">
   <button class="btn1" mat-raised-button (click)="openCreateNewGameComponent()">CREAR UN NUEVO JUEGO</button>
-  <button class="btn1" *ngIf="activos" mat-raised-button (click)="ShowResults()">VER
+  <button class="btn1" *ngIf="results" mat-raised-button (click)="ShowResults()">VER
     RESULTADOS</button>
   <!--<button mat-raised-button >(click)="showGames(group)">{{ 'GROUP.MYGAMES |translate }}</button>-->
   <br>
